--- a/index.html
+++ b/index.html
@@ -14,10 +14,26 @@
     <h3 class="display-6 text-center">How well do you know ...</h3>
     <h1 class="display-1 text-center">The Simpsons</h1>
   </div>
-<div class="container">
+<div class="container" >
+  <div class="row">
+    <div class="col-lg text-center" id="image">
+
+    </div>
+  </div>
   <div class="row">
     <div class="col-lg text-center">
-      Stuff
+      <h3 id="quiz"></h3>
+<p id="explanation"></p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg text-center" id="answers">
+
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg text-center">
+<p id="results"></p>
     </div>
   </div>
 </div>
